--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,2 @@
 build:
-	go build -ldflags "-X main.Url=http://localhost:8080" -o tfagent .
+	go build -ldflags "-X main.Url=http://localhost:8080/" -o tfagent .
