fix():client and server now can communicate in stream

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,3 @@
 build:
-	go build -ldflags "-X main.Url=http://localhost:8080/" -o tfagent .
+	#go build -ldflags "-X main.Url=http://localhost:8080/" -o tfagent .
+	go build -ldflags "-X main.Url=https://agent-dot-vojtah-sandbox.ew.r.appspot.com/" -o tfagent .
