--- a/agent/app.yaml
+++ b/agent/app.yaml
@@ -1,11 +1,17 @@
 runtime: custom
 service: agent
 env: flex
+automatic_scaling:
+  max_num_instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
 
 env_variables:
   COMMITTER: "hromadkavojta"
   COMMITTER_EMAIL: "hromadkavojta@gmail.com"
   SOURCE_REPO: "BP-infratest"
-  ACCESS_TOKEN: "0e19c3425cf899c11a0f37004993601d5ca8c31d"
+  ACCESS_TOKEN: ""
   GIT_URL_HTTPS: "https://github.com/hromadkavojta/BP-infratest.git"
   GIT_URL_SSH: "git@github.com:hromadkavojta/BP-infratest.git"
