finishing README.md

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,3 +1,2 @@
 build:
-	#go build -ldflags "-X main.Url=http://localhost:8080/" -o tfagent .
-	go build -ldflags "-X main.Url=https://agent-dot-vojtah-sandbox.ew.r.appspot.com/" -o tfagent .
+	go build -ldflags "-X main.Url=https://agent-dot-vojtah-sandbox.ew.r.appspot.com/ -X main.Hash=THISISRANDOMGENERATEDHASHINBUILD"  -o tfagent .
