--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,4 @@
+# main.Url string replace with your app engine Url
+# main.Hash string replace with your created secret (used to secure communication)
 build:
 	go build -ldflags "-X main.Url=https://agent-dot-vojtah-sandbox.ew.r.appspot.com/ -X main.Hash=THISISRANDOMGENERATEDHASHINBUILD"  -o tfagent .
